[web] [fix] Comm header aligned correctly per figma
Summary: Header left-padding match figma {F9890}

Test Plan: should look like figma {F9891} https://www.figma.com/file/a1nkbWgbgjRlrOY9LVurTz/Comm-%2F-Desktop-app?node-id=1272%3A88750

Reviewers: atul, ashoat

Reviewed By: atul, ashoat

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga

Differential Revision: https://phabricator.ashoat.com/D2923

--- a/web/style.css
+++ b/web/style.css
@@ -78,7 +78,7 @@ div.main-header {
 }
 div.main-header > h1 {
   color: var(--fg);
-  padding: 0 6px;
+  padding-left: 92px;
   font-family: var(--font-logo);
   line-height: var(--line-height-text);
   font-weight: var(--semi-bold);
